[gd_scene load_steps=24 format=3 uid="uid://yt3boj0lw4yf"]

[ext_resource type="Script" path="res://2D/Scripts/Enemies/Enemy.gd" id="1_pbbsk"]
[ext_resource type="Script" path="res://2D/Scripts/Enemies/Enemy_State_Machine.gd" id="2_gbq0s"]
[ext_resource type="Script" path="res://2D/Scripts/Enemies/States/Follow_State.gd" id="3_bma5r"]
[ext_resource type="Script" path="res://2D/Scripts/Enemies/States/Idle_State.gd" id="4_2egie"]
[ext_resource type="Script" path="res://2D/Scripts/Enemies/States/Roaming_State.gd" id="5_4yl3q"]
[ext_resource type="Script" path="res://2D/Scripts/Enemies/States/Charging_State.gd" id="6_5iv2v"]
[ext_resource type="Script" path="res://2D/Scripts/Enemies/States/Charge_Prep_State.gd" id="7_654hi"]
[ext_resource type="Script" path="res://2D/Scripts/Enemies/States/Weeping_State.gd" id="8_regu1"]
[ext_resource type="Script" path="res://2D/Scripts/Enemies/States/Fleeing_State.gd" id="9_c2fj4"]
[ext_resource type="Texture2D" uid="uid://cgwls5nt75eru" path="res://2D/Assets/Monsters/ShadowMonster_PoliceOfficer_Idle.png" id="10_xl5wj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1wii8"]
atlas = ExtResource("10_xl5wj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtssa"]
atlas = ExtResource("10_xl5wj")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjxpj"]
atlas = ExtResource("10_xl5wj")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fndrh"]
atlas = ExtResource("10_xl5wj")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kagac"]
atlas = ExtResource("10_xl5wj")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gatjy"]
atlas = ExtResource("10_xl5wj")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_akstm"]
atlas = ExtResource("10_xl5wj")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ok75b"]
atlas = ExtResource("10_xl5wj")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_25b4q"]
atlas = ExtResource("10_xl5wj")
region = Rect2(512, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_pv2yx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wii8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtssa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjxpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fndrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kagac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gatjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akstm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok75b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25b4q")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hyo0g"]
size = Vector2(34, 56)

[sub_resource type="CircleShape2D" id="CircleShape2D_bjfyg"]
radius = 200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7kixm"]
radius = 92.0

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_pbbsk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_pv2yx")
animation = &"idle"
frame_progress = 0.678854
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_hyo0g")

[node name="Detection_Radius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_Radius"]
position = Vector2(4, 0)
shape = SubResource("CircleShape2D_bjfyg")

[node name="Charge_Radius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Charge_Radius"]
shape = SubResource("CircleShape2D_7kixm")

[node name="Ray_Cast_Down_Right" type="RayCast2D" parent="."]
position = Vector2(18, 16)
target_position = Vector2(0, 19)
hit_from_inside = true

[node name="Ray_Cast_Side_Right" type="RayCast2D" parent="."]
position = Vector2(19, -23)
target_position = Vector2(0, 53)
hit_from_inside = true

[node name="Ray_Cast_Down_Left" type="RayCast2D" parent="."]
position = Vector2(-18, 16)
target_position = Vector2(0, 19)
hit_from_inside = true

[node name="Ray_Cast_Side_Left" type="RayCast2D" parent="."]
position = Vector2(-19, -23)
target_position = Vector2(0, 53)
hit_from_inside = true

[node name="Enemy_State_Machine" type="Node" parent="." node_paths=PackedStringArray("character_body", "default_state")]
script = ExtResource("2_gbq0s")
character_body = NodePath("..")
default_state = NodePath("Follow")

[node name="Follow" type="Node" parent="Enemy_State_Machine" node_paths=PackedStringArray("ray_cast_down_right", "ray_cast_down_left")]
script = ExtResource("3_bma5r")
ray_cast_down_right = NodePath("../../Ray_Cast_Down_Right")
ray_cast_down_left = NodePath("../../Ray_Cast_Down_Left")

[node name="Idle" type="Node" parent="Enemy_State_Machine"]
script = ExtResource("4_2egie")

[node name="Roaming" type="Node" parent="Enemy_State_Machine" node_paths=PackedStringArray("ray_cast_down_right", "ray_cast_side_right", "ray_cast_down_left", "ray_cast_side_left")]
script = ExtResource("5_4yl3q")
ray_cast_down_right = NodePath("../../Ray_Cast_Down_Right")
ray_cast_side_right = NodePath("../../Ray_Cast_Side_Right")
ray_cast_down_left = NodePath("../../Ray_Cast_Down_Left")
ray_cast_side_left = NodePath("../../Ray_Cast_Side_Left")

[node name="Charging" type="Node" parent="Enemy_State_Machine" node_paths=PackedStringArray("ray_cast_down_right", "ray_cast_down_left")]
script = ExtResource("6_5iv2v")
ray_cast_down_right = NodePath("../../Ray_Cast_Down_Right")
ray_cast_down_left = NodePath("../../Ray_Cast_Down_Left")

[node name="Charge_Prep" type="Node" parent="Enemy_State_Machine"]
script = ExtResource("7_654hi")

[node name="Weeping" type="Node" parent="Enemy_State_Machine"]
script = ExtResource("8_regu1")

[node name="Fleeing" type="Node" parent="Enemy_State_Machine" node_paths=PackedStringArray("ray_cast_down_right", "ray_cast_side_right", "ray_cast_down_left", "ray_cast_side_left")]
script = ExtResource("9_c2fj4")
ray_cast_down_right = NodePath("../../Ray_Cast_Down_Right")
ray_cast_side_right = NodePath("../../Ray_Cast_Side_Right")
ray_cast_down_left = NodePath("../../Ray_Cast_Down_Left")
ray_cast_side_left = NodePath("../../Ray_Cast_Side_Left")

[connection signal="body_entered" from="Detection_Radius" to="." method="_on_detection_radius_body_entered"]
[connection signal="body_exited" from="Detection_Radius" to="." method="_on_detection_radius_body_exited"]
